# django-tutorial

./: .gitignore  db.sqlite3  pyproject.toml
mysite/: settings.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html
