[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["seonghyunJung <tjdgusus@gmail.com>"]
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
